--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowise-embed-react": "^1.0.1",
     "next": "13.2.4",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
